ROOT/etc/iptables.up.rules
# Generated by iptables-save v1.6.1 on Sun Oct 14 11:58:05 2018
*filter
:local_services - [0:0]
:logger - [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:INPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack -j DROP  --ctstate INVALID 
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -j local_services
-A local_services -p tcp -m comment -m tcp --dport 10050 -j ACCEPT --comment "zabbix client"
-A INPUT -p icmp -j ACCEPT
-A local_services -p udp -m udp -m comment --dport 17500 -j ACCEPT --comment dropbox
-A INPUT -p tcp -m tcp -m comment -i lxdbr0 --dport 53 -j ACCEPT --comment "generated for LXD network lxdbr0"
-A INPUT -p udp -m udp -m comment -i lxdbr0 --dport 53 -j ACCEPT --comment "generated for LXD network lxdbr0"
-A INPUT -p udp -m udp -m comment -i lxdbr0 --dport 67 -j ACCEPT --comment "generated for LXD network lxdbr0"
-A INPUT -j logger
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m comment -o lxdbr0 -j ACCEPT --comment "generated for LXD network lxdbr0"
-A FORWARD -m comment -i lxdbr0 -j ACCEPT --comment "generated for LXD network lxdbr0"
-A FORWARD -p udp -m udp -o wlp2s0 --dport 53 -j ACCEPT
-A FORWARD -j logger
-A local_services -p udp -m udp -i enp3s0 --dport 123 -j ACCEPT
-A local_services -p tcp -m tcp -i enp3s0 --dport 4000 -j ACCEPT
-A local_services -p tcp -m tcp -i enp3s0 --dport 22 -j ACCEPT
-A local_services -p tcp -m tcp -m multiport -i enp3s0 -j ACCEPT --dports 80,443
-A local_services -p tcp -m tcp -i enp3s0 --dport 3129 -j ACCEPT
-A local_services -p tcp -m tcp -i enp3s0 --dport 10000 -j ACCEPT
-A local_services -p tcp -m tcp --dport 3142 -j ACCEPT
-A local_services -p tcp -m tcp --dport 8123 -j ACCEPT
-A logger -m pkttype -j DROP  --pkt-type broadcast 
-A logger -p tcp -m tcp --dport 3128 -j DROP
-A logger -d 224.0.0.0/8 -j DROP
-A logger -j LOG  --log-prefix "iptables blocked: "
COMMIT
# Completed on Sun Oct 14 11:58:05 2018
# Generated by iptables-save v1.6.1 on Sun Oct 14 11:58:05 2018
*mangle
:PREROUTING ACCEPT [1926987:20673903318]
:INPUT ACCEPT [1904946:20671532933]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1872148:20684785969]
:POSTROUTING ACCEPT [1874062:20685335823]
-A POSTROUTING -o lxdbr0 -p udp -m udp --dport 68 -m comment --comment "generated for LXD network lxdbr0" -j CHECKSUM --checksum-fill
COMMIT
# Completed on Sun Oct 14 11:58:05 2018
# Generated by iptables-save v1.6.1 on Sun Oct 14 11:58:05 2018
*nat
:POSTROUTING ACCEPT [0:0]
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:INPUT ACCEPT [0:0]
-A POSTROUTING -s 192.168.5.0/24 -j MASQUERADE
-A POSTROUTING -m comment -s 10.225.164.0/24 ! -d 10.225.164.0/24 -j MASQUERADE --comment "generated for LXD network lxdbr0"
COMMIT
# Completed on Sun Oct 14 11:58:05 2018
